# rfid-Comprehensive

./: .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  pyproject.toml
.github/workflows/: tests.yml
checkin/: __init__.py  __main__.py  conftest.py  gunicorn_runner.py  logging.py  settings.py
checkin/db/: base.py  utils.py
checkin/db/dao/: dummy_dao.py  inventory_dao.py
checkin/db/migrations/: env.py
checkin/db/migrations/versions/: 2023-12-29-11-56_3d32cfaf9507.py
checkin/db/models/: __init__.py  dummy_model.py  inventory_model.py
checkin/services/: __init__.py
checkin/tests/: __init__.py  test_dummy.py  test_inventory.py
checkin/web/: __init__.py  application.py  lifetime.py
checkin/web/api/: __init__.py  router.py
checkin/web/api/dummy/: __init__.py  views.py
checkin/web/api/echo/: __init__.py  views.py
checkin/web/api/inventory/: __init__.py  views.py
checkin/web/api/monitoring/: __init__.py
deploy/: Dockerfile  docker-compose.dev.yml  docker-compose.yml
rfid_lab/: __init__.py  __main__.py  conftest.py  gunicorn_runner.py  logging.py  settings.py
rfid_lab/db/: config.py
rfid_lab/db/dao/: dummy_dao.py  inventory_dao.py
rfid_lab/db/models/: __init__.py  inventory_model.py
rfid_lab/services/: __init__.py
rfid_lab/tests/: __init__.py  test_dummy.py
rfid_lab/web/: __init__.py  application.py  lifetime.py
rfid_lab/web/api/: __init__.py  router.py
rfid_lab/web/api/dummy/: __init__.py  views.py
rfid_lab/web/api/echo/: __init__.py  views.py
rfid_lab/web/api/inventory/: __init__.py  schema.py  views.py
rfid_lab/web/api/monitoring/: __init__.py
